# masters-llm-rag-code-reviewer

./: .acr-config.example.yml  .acr-config.yml  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TODO.md  architektura-systemu.md  pyproject.toml
acr_system/application/dto/: dto.py
acr_system/application/use_cases/: evaluate_pull_request.py  (+4 more)
acr_system/ast/: README.md  __init__.py  language_registry.py  parser.py  tree_sitter_adapter.py
acr_system/experimental/: __init__.py  metrics.py  reporting.py
docs/: IMPACT_ANALYSIS_TESTS_STATUS.md  seminarium-objasnienie-metod.md  seminarium-plan-slajdow-objasnienie-metod.md  seminarium-przeglad-metod.md
docs/magisterka/: analiza-problemu-i-wymagan_systemu_acr.md  analiza-problemu_acr.md  architektura_ogolna_systemu_acr.md  koncepcja_dynamicznego_doboru_modelu_llm_acr.md  kryteria_oceny_jakosci_code_review_acr.md  macierz_wymagan_acr.md  model_danych_i_wybor_technologii_acr.md  projekt_mechanizmu_konfiguracji_per_repozytorium_acr.md  projekt_modulu_ai_wybor_modelu_i_orkiestracja_zapytan_acr.md  projekt_modulu_integracji_z_systemami_kontroli_wersji_acr.md  projekt_warstwy_rag_repozytorium_wiedzy_embeddingi_pipeline_acr.md  przeplyw_danych_i_przetwarzanie_acr.md  rag_szczegoly_implementacyjne.md  srodowisko_technologiczne_i_narzedzia_implementacja_rozwiazania_acr.md  testy_jednostkowe_i_integracyjne_implementacja_rozwiazania_acr.md  usprawnienia_i_optymalizacje_implementacja_rozwiazania_acr.md  zakres_wiedzy_wykorzystywanej_w_rag_dokumentacja_cr_standardy_analiza_problemu.md  zalozenia_dotyczace_wyboru_modeli_llm_acr.md
examples/: github_app_auth_example.py
exp/: aggregate_reports.py  aggregate_results.csv  aggregate_results.json  aggregate_results_expert.json  run_experiment.sh
exp/home-assistant/: .acr-config-no-rag.yml  .acr-config.yml  .gitignore  pr_urls.txt
exp/sentry/: .acr-config-no-rag.yml  .acr-config.yml  pr_urls.txt
exp/vscode/: .acr-config-no-rag.yml  .acr-config.yml  pr_urls.txt
src/: 1-wstep.tex  2-cr.tex  3-ml-cr.tex  4-llm.tex  5-1-prompt-based-cr.tex  5-2-fine-tune-cr.tex  5-3-rag-cr.tex  5-4-llm-and-static-cr.tex  5-5-eval.tex  5-llm-cr.tex  6-sum.tex  literatura.tex
tests/: conftest.py
tests/ast/: __init__.py  test_language_registry.py  test_tree_sitter_adapter.py
tests/integration/: test_external_api_integration.py  test_full_pr_review_flow.py  test_impact_analysis_integration.py  test_pr_review_with_ci.py  test_rag_retrieval_flow.py
tests/unit/: test_anthropic_adapter.py  test_entities.py  test_experimental_metrics.py  test_faiss_store_history_indexing.py  test_github_checks_adapter.py  test_github_jwt.py  test_gitlab_adapter.py  test_gitlab_ci_adapter.py  test_llm_impact_analyzer.py  test_openai_adapter.py  test_publish_config.py  test_tree_sitter_call_graph_analyzer.py  test_value_objects.py
(+40 files in other folders)
